# HarnessSolomon

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.github/: lighthouserc.json
.github/workflows/: docs.yml
.harness/agents/: README.md  secretary.md
.harness/hooks/: auto_format.json  complexity_check.json  docs_required.json  license_check.json  secret_detect.json  sql_injection_guard.json  test_required.json  unsafe_import_block.json
.harness/plugins/: example_logger.py  tool_logger.py
.solomon/phase-0/: evidence.md  spec.md  verdict.json
benchmarks/: compare_redact.py
docs/: CHANGELOG.md  MODEL_REGISTRY.md  MODEL_SUPPORT.md  PHASE-0-PLAN.md  PHASE-0-SPEC.md  PHASE3-METRICS-B-PLAN.md  PHASE3-privacy-precompact-time.md  PHASE3-reflection-compact.md  PHASE3-select-compress.md  PHASE3-tool-offload.md  PHASE3-write.md  PHASE3.5.md  PHASE3.md  PHASE4-HOOKS-PLAN.md  PHASE4-OBSERVABILITY-PLAN.md  PHASE5-B2-B3-PLAN.md  USER_GUIDE.md  api.md  architecture.md  calibration-report-v133.md  calibration-report-v134.md  cc-vs-opencode.md  cli.md  elicitation.md  hooks.md  merge-queue.md  migration.md  observability.md  plugins.md  quickstart.md  roadmap.md  scope-api.md  sources.md  subagents.md  techniques-catalog.md  webhooks.md
docs-site/: .gitignore  README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs-site/.github/: lighthouserc.json
docs-site/.github/workflows/: docs.yml
docs-site/docs/: intro.md
docs-site/docs/api/: add-message-api-sessions-session-id-messages-post.ParamsDetails.json  add-message-api-sessions-session-id-messages-post.RequestSchema.json  add-message-api-sessions-session-id-messages-post.StatusCodes.json  add-message-api-sessions-session-id-messages-post.api.mdx  admin-audit-recent-api-v-1-observability-audit-recent-get.ParamsDetails.json  admin-audit-recent-api-v-1-observability-audit-recent-get.StatusCodes.json  admin-audit-recent-api-v-1-observability-audit-recent-get.api.mdx  admin-health-deep-api-v-1-observability-health-deep-get.StatusCodes.json  admin-health-deep-api-v-1-observability-health-deep-get.api.mdx  admin-metrics-api-v-1-observability-metrics-get.ParamsDetails.json  audit-list-api-v-1-audit-get.api.mdx  (+105 more)
docs-site/scripts/: gen-config-ref.py
harness/: README.md  __init__.py  __main__.py  cli.py  cli_follow.py  cli_hooks.py  cli_observability.py  config.py  elicitation.py  watcher.py
harness-perf/: Cargo.toml  pyproject.toml
harness-perf/src/: bm25.rs  ed25519_verify.rs  lib.rs  redact.rs
harness/agents/: __init__.py  cascade.py  compact_store.py  context.py  hot_reload.py  idle_trigger.py  jobs.py  l2_retriever.py  l2_vector_store.py  merge_queue.py  outbound.py  pr_integration.py  pr_split.py  pr_templating.py  pre_compact.py  registry.py  repo_locks.py  router.py  runner.py  scratchpad.py  scratchpad_store.py  spec.py  verify.py  webhook_handler.py  webhook_store.py  worktree.py
harness/audit/: __init__.py  export.py
harness/context/: __init__.py  compaction.py  compaction_audit.py  prompts.py  scratchpad_audit.py
harness/eval/: README.md  __init__.py  calibration_parser.py  calibration_report.py  compaction_loss.py  filler.py  golden.py  reranker.py  retention.py  retrieval.py  runner.py  synthetic_benchmark.py  threshold_grid_search.py  tier_routing.py
harness/hooks/: __init__.py  audit.py  context.py  elicitation.py  events.py  filter_chain.py  hot_reload.py  http.py  llm_hook.py  rate_limit.py  registry.py  runner.py  schemas.py  subprocess.py
harness/memory/: __init__.py  schema.py  unified.py
harness/observability/: __init__.py  cost.py  emit.py  events.py  health.py  llm_usage_log.py  logger.py  metrics.py  metrics_broker.py  metrics_collector.py  tracer.py
harness/plugins/: __init__.py  base.py  dispatcher.py  loader.py  manifest_v2.py  marketplace.py  sandbox.py  signature.py
harness/privacy/: __init__.py  hot_reload.py  path_match.py  zone_config.py  zone_filter.py  zones.py
harness/redaction/: __init__.py  audit.py  engine.py  patterns.py
harness/security/: __init__.py  trust_registry.py
harness/server/: app.py  deprecation.py  generate_openapi.py  openapi.json
harness/web/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
tests/: conftest.py  test_agent_cascade.py  test_agent_context.py  test_agent_loop.py  test_agent_registry.py  test_agent_router.py  test_agent_runner.py  test_agent_spec.py  test_agent_verify.py  test_agent_worktree.py  test_agents_api.py  test_agents_jobs_post.py  test_agents_webhooks_api.py  test_api_versioning.py  test_audit_export_v131.py  test_auth_deps.py  test_builtin_agent_hot_reload.py  test_calibration_parser.py  test_calibration_report.py  test_capabilities.py  test_chat_ws.py  test_cli_agents.py  test_cli_audit_filter.py  test_cli_auth.py  test_cli_context.py  test_cli_follow.py  test_cli_follow_v122.py  test_cli_hooks.py  test_cli_hooks_audit.py  test_cli_hooks_dispatch.py  test_cli_observability.py  test_cli_split_plan.py  test_cli_stats_diff.py  test_codeowners_parser.py  test_compact_route_v1.py  test_compact_store.py  test_compact_trigger.py  test_compactor_cache.py  test_compactor_observability.py  test_compactor_v150_integration.py  (+142 more)
tests/eval/: __init__.py  conftest.py  test_compaction_loss_golden.py  test_context_retention_golden.py  test_corpus_channel_separation_v124.py  test_eval_runner.py  test_eval_trust_boundary.py  test_filler_reranker_v124.py  test_force_compact_regression.py  test_golden_queries_infrastructure.py  test_hybrid_retriever.py  test_precision_golden.py  test_recall_golden.py  test_tier_routing_pilot_v126.py
tests/perf/: __init__.py  test_bm25_v129.py  test_redact_v129.py
tests/smoke/: __init__.py  test_v100_rc1.py
web/: .eslintrc.cjs  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
web/e2e/: README.md  home.spec.ts  navigation.spec.ts  settings.spec.ts
web/src/: App.module.css  App.tsx  main.tsx
web/tests/: test_build_infra_v130.py
(+187 files in other folders)
