[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "solomon-harness"
version = "1.5.0"
description = "Open-source agentic harness for local LLM"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    {name = "Solomon", email = "solomon@mark.local"},
]
keywords = ["agent", "llm", "harness", "open-source"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "litellm>=1.40",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12.0",
    "aiosqlite>=0.19",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "aiofiles>=23.2",
    "click>=8.1",
    "rich>=13.7",
    "instructor>=1.3",
    "watchfiles>=0.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "httpx>=0.27",
    "ruff>=0.4",
    "black>=24.1",
    "mypy>=1.8",
    "pre-commit>=3.6",
]
memory = [
    "qdrant-client>=1.7",
    "neo4j>=5.15",
    "mem0ai>=0.1",
    "sentence-transformers>=2.3",
    "FlagEmbedding>=1.2",  # bge-reranker-v2-m3
]
eval = [
    "datasets>=2.16",
    "swebench>=1.0",
]

[project.scripts]
harness = "harness.cli:main"
solomon-harness = "harness.cli:main"

[project.urls]
Homepage = "https://github.com/mbakholdin-byte/HarnessSolomon"
Issues = "https://github.com/mbakholdin-byte/HarnessSolomon/issues"

[tool.hatch.build.targets.wheel]
packages = ["harness"]

[tool.hatch.build.targets.wheel.force-include]
"harness/agents/builtin" = "harness/agents/builtin"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "ASYNC", "S", "RUF"]
ignore = ["S101"]  # assert в тестах

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --strict-markers"
markers = [
    "real_llm: requires a real LLM API key in env (MINIMAX_API_KEY / ZHIPUAI_API_KEY / MOONSHOT_API_KEY / OPENAI_API_KEY / ANTHROPIC_API_KEY). Skipped automatically when none is set.",
    "requires_onnx: requires a local ONNX embedding model (intfloat/multilingual-e5-small) at the configured EMBEDDINGS_DIR. Skipped automatically when the model files are not present.",
]
